<resources>
    <string name="app_name">AppAddressBook</string>
    <string name="empty" />

    <!--MainFragment-->
    <string name="label_contacts_book">Contacts book</string>
    <string name="open_contacts">Import contacts</string>
    <string name="export_contacts">Export contacts</string>
    <string name="exported_to_xml_message">Contacts exported to XML file</string>
    <string name="exported_to_json_message">Contacts exported to JSON file</string>
    <string name="label_no_contacts">Contacts are not imported.</string>
    <string name="search_hint">Search by name</string>
    <string name="parse_xml_error">Error while parsing XML file</string>
    <string name="parse_json_error">Error while parsing JSON file</string>
    <string name="xml_format">XML</string>
    <string name="json_format">JSON</string>
    <!--/MainFragment-->

    <!--Shortcuts-->
    <string name="add_contact">Add new contact</string>
    <!--/Shortcuts-->

    <!--Add/Edit contact-->
    <string name="new_contact_title">New contact</string>
    <string name="edit_contact_title">Edit contact</string>
    <string name="not_specified_hint">None</string>
    <string name="customer_id">Customer ID</string>
    <string name="company_name">Company name</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_title">Contact title</string>
    <string name="contact_address">Address</string>
    <string name="contact_city">City</string>
    <string name="contact_email">Email</string>
    <string name="contact_region">Region</string>
    <string name="contact_postal_code">Postal code</string>
    <string name="contact_country">Country</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_fax">Fax</string>
    <string name="error_message_customerId_required">Customer ID and contact name are required</string>
    <string name="contact_added_message">New contact added</string>
    <string name="contact_edited_message">Contact edited</string>
    <!--Add/Edit contact-->

    <!--ContactDetailsFragment-->
    <string name="label_company_name">Company Name:</string>
    <string name="label_contact_title">Contact Title:</string>
    <string name="label_address">Address:</string>
    <string name="label_city">City:</string>
    <string name="label_email">Email:</string>
    <string name="label_region">Region:</string>
    <string name="label_postal_code">Postal Code:</string>
    <string name="label_country">Country:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_fax">Fax:</string>
    <string name="error_contact_load">Contact load error</string>
    <!--/ContactDetailsFragment-->

</resources>