<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60"
            android:background="?colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="New contact"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSave"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                android:layout_marginEnd="@dimen/dimen_16"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/dimen_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/ic_save"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/clHeader"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dimen_30">

                <TextView
                    android:id="@+id/customerIdTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/customer_id" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/customerIdInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapCharacters"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/company_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/companyNameInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactNameInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_title" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactTitleInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_address" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactAddressInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_city" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactCityInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactEmailInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_region" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactRegionInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_postal_code" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactPostalCodeInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_country" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactCountryInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_phone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactPhoneInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:gravity="start"
                    android:text="@string/contact_fax" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contactFaxInput"
                    style="@style/BorderInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:hint="@string/not_specified_hint" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>